--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+server.servlet.context-path=/U-rent
+spring.datasource.url=jdbc:mysql://146.83.196.204:3307/tamara.salgado1601
+spring.datasource.username=tamara.salgado1601
+spring.datasource.password=6scYW2rkpYAU
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql=true
